# ai-project

./: .env.example  AI_EDU_OPTIMIZATION_BLUEPRINT.md  Makefile  PROJECT_DIRS.txt  PROJECT_DIRS_CLEAN.txt  PROJECT_EXT_STATS.txt  PROJECT_EXT_STATS_CLEAN.txt  PROJECT_FILES.txt  PROJECT_FILES_CLEAN.txt  PROJECT_LINE_COUNTS.tsv  PROJECT_LINE_COUNTS_CLEAN.tsv  PROJECT_SUMMARY.txt  PROJECT_SUMMARY_CLEAN.txt  PROJECT_TREE.txt  PROJECT_TREE_CLEAN.txt  README.md  ai_core.py  app.py  pyproject.toml  test_mongodb.py  user_data.py
.github/workflows/: ci.yml
apps/streamlit/: README.md  ai_core.py  api_client.py  streamlit_app.py  user_data.py
apps/streamlit/pages/: 1_学习社区.py  2_学习计划.py  3_知识图谱.py  4_数据分析.py  5_成就系统.py
configs/: logging.json
data/: community_data.json  knowledge_graph.json  user_.json  user_data.csv  user_default.json  user_清华大学预备生.json  user_罪罪州.json
docs/: ARCHITECTURE.md  CHANGELOG.md  README_legacy.md
infra/: requirements_legacy.txt
infra/docker/: api.Dockerfile  docker-compose.dev.yml  worker.Dockerfile
infra/migrations/: README.md
pages/: .env.example  .gitignore  1_学习社区.py  2_学习计划.py  3_知识图谱.py  4_数据分析.py  5_成就系统.py
requirements/: ai.txt  all.txt  base.txt  dev.txt  worker.txt
scripts/: dev_quickstart.sh
services/ai/src/: orchestrator.py  retrieval_client.py  safety.py
services/api/src/: __init__.py  main.py
services/api/tests/: test_health.py
services/retrieval/src/: __init__.py  documents.py  vector_store.py
services/worker/src/: __init__.py  celery_app.py
tests/unit/: test_learning_plan.py  test_orchestrator.py
(+60 files in other folders)
