[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-edu-platform"
version = "0.1.0"
description = "AI-powered personalized learning platform"
requires-python = ">=3.10"
readme = "AI_EDU_OPTIMIZATION_BLUEPRINT.md"
license = {text = "Proprietary"}
keywords = ["education", "ai", "personalized-learning"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Framework :: FastAPI",
  "Topic :: Education"
]
dependencies = []

[tool.setuptools.packages.find]
where = ["services", "packages"]
include = ["*"]
exclude = ["*.tests"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["services", "packages"]
branch = true
